added user area component

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
 <div id="reactAppContainer"></div>
 
-<video id="myvideo" style="border: solid; border-color: aqua" autoplay muted></video>
+<!--<video id="myvideo" style="border: solid; border-color: aqua" autoplay muted></video>-->
 
 
 </body>
